--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>K-APEX  Bulk Rate Processor  v8 (Driving Miles)</title>
+<title>K-APEX  Bulk Rate Processor</title>
 <style>
   :root{--bg:#f4f4f4;--card:#ffffff;--text:#1f2937;--muted:#6b7280;--gray:#575757;--orange:#f36f21;--ok:#10b981;--err:#ef4444;--border:#e5e7eb}
   *{box-sizing:border-box}
@@ -37,7 +37,7 @@
 <div class="wrap">
   <header>
     <div class="brand">
-      <span class="title">K-APEX . Bulk Rate Processor</span>
+      <span class="title">K-APEX  Bulk Rate Processor</span>
       <span class="badge">v8 . driving miles via API</span>
     </div>
   </header>
